gap fix for bigger screens

--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,9 @@ body{
     /* justify-content: space-around; */
     gap : 6%;
     width : 50%;
-    justify-content: space-between;
+    /* justify-content: space-around; */
     /* gap : 2rem; */
-    /* padding-bottom : 10%; */
+    padding-bottom : 10%;
 }
 .right-content {
     text-align: center;
@@ -165,7 +165,7 @@ a{
         /* height: 98vh; */
         margin-top: 0;
         padding-top: 0;
-        /* gap : 1.5rem; */
+        gap : 1.5rem;
     }
     .left-content{
         padding-left: 0;
@@ -173,7 +173,7 @@ a{
         text-align: center;
         gap : 2rem;
         line-height: 1.5;
-        /* height : 65%; */
+        height : 65%;
     }
     .contact{
         width : 100%;
